@@ -51,6 +51,7 @@ export(readSparseCounts)
 export(sumCountsAcrossCells)
 export(sumCountsAcrossFeatures)
 export(summarizeAssayByGroup)
+export(uniquifyDataFrameByGroup)
 export(uniquifyFeatureNames)
 export(whichNonZero)
 exportClasses(outlier.filter)
